--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="error-message" id="errorMessage"></div>
             </div>
 
-            <!--<div class="features-section">
+            <div class="features-section">
                 <h3>Why Choose STK College?</h3>
                 <div class="feature">
                     <i class="fas fa-shield-alt"></i>
@@ -84,7 +84,7 @@
                         <p>Download attendance reports instantly</p>
                     </div>
                 </div>
-            </div>-->
+            </div>
         </div>
     </div>
 
