--- a/admin.html
+++ b/admin.html
@@ -1,3 +1,4 @@
+<!-- Updated admin.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -81,7 +82,7 @@
                         <img src="https://ui-avatars.com/api/?name=Admin+User&background=4f46e5&color=fff" alt="Admin User">
                         <div>
                             <div id="userNameDisplay">Admin User</div>
-                            <small>Administrator</small>
+                            <small>Admin</small>
                         </div>
                     </div>
                     <button class="logout-btn" onclick="logout()">
@@ -401,62 +402,106 @@
             </div>
         </main>
     </div>
-<!-- Delete Confirmation Modal -->
-<div class="modal-overlay" id="deleteModal">
-    <div class="modal">
-        <div class="modal-header">
-            <h3>Confirm Deletion</h3>
-            <button class="modal-close" onclick="closeModal('deleteModal')">&times;</button>
-        </div>
-        <div class="modal-body">
-            <div class="confirmation-icon">
-                <i class="fas fa-exclamation-triangle"></i>
-            </div>
-            <div class="confirmation-message">
-                <h4>Are you sure?</h4>
-                <p id="deleteModalMessage">This action cannot be undone.</p>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <button class="btn" onclick="closeModal('deleteModal')">Cancel</button>
-            <button class="btn btn-danger" id="confirmDeleteBtn">Delete</button>
-        </div>
-    </div>
-</div>
 
-<!-- Edit User Modal -->
-<div class="modal-overlay" id="editModal">
-    <div class="modal">
-        <div class="modal-header">
-            <h3>Edit User</h3>
-            <button class="modal-close" onclick="closeModal('editModal')">&times;</button>
-        </div>
-        <div class="modal-body">
-            <form id="editUserForm">
-                <input type="hidden" id="editUserId">
-                <div class="form-group">
-                    <label for="editUserName">Full Name</label>
-                    <input type="text" id="editUserName" class="form-control" required>
+    <!-- Delete Confirmation Modal -->
+    <div class="modal-overlay" id="deleteModal">
+        <div class="modal">
+            <div class="modal-header">
+                <h3>Confirm Deletion</h3>
+                <button class="modal-close" onclick="closeModal('deleteModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="confirmation-icon">
+                    <i class="fas fa-exclamation-triangle"></i>
                 </div>
-                <div class="form-group">
-                    <label for="editUserEmail">Email Address</label>
-                    <input type="email" id="editUserEmail" class="form-control" required>
+                <div class="confirmation-message">
+                    <h4>Are you sure?</h4>
+                    <p id="deleteModalMessage">This action cannot be undone.</p>
                 </div>
-                <div class="form-group">
-                    <label for="editUserRole">Role</label>
-                    <select id="editUserRole" class="form-control" required>
-                        <option value="admin">Administrator</option>
-                        <option value="teacher">Teacher</option>
-                        <option value="student">Student</option>
-                    </select>
-                </div>
-            </form>
-        </div>
-        <div class="modal-footer">
-            <button class="btn" onclick="closeModal('editModal')">Cancel</button>
-            <button class="btn btn-primary" onclick="updateUser()">Update User</button>
+            </div>
+            <div class="modal-footer">
+                <button class="btn" onclick="closeModal('deleteModal')">Cancel</button>
+                <button class="btn btn-danger" id="confirmDeleteBtn">Delete</button>
+            </div>
         </div>
     </div>
-</div>
+
+    <!-- Edit User Modal -->
+    <div class="modal-overlay" id="editModal">
+        <div class="modal">
+            <div class="modal-header">
+                <h3>Edit User</h3>
+                <button class="modal-close" onclick="closeModal('editModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form id="editUserForm">
+                    <input type="hidden" id="editUserId">
+                    <div class="form-group">
+                        <label for="editUserName">Full Name</label>
+                        <input type="text" id="editUserName" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="editUserEmail">Email Address</label>
+                        <input type="email" id="editUserEmail" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="editUserRole">Role</label>
+                        <select id="editUserRole" class="form-control" required>
+                            <option value="admin">Administrator</option>
+                            <option value="teacher">Teacher</option>
+                            <option value="student">Student</option>
+                        </select>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn" onclick="closeModal('editModal')">Cancel</button>
+                <button class="btn btn-primary" onclick="updateUser()">Update User</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Edit Attendance Status Modal -->
+    <div class="modal-overlay" id="editAttendanceModal">
+        <div class="modal">
+            <div class="modal-header">
+                <h3>Update Attendance Status</h3>
+                <button class="modal-close" onclick="closeModal('editAttendanceModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form id="editAttendanceForm">
+                    <input type="hidden" id="editAttendanceId">
+                    <div class="form-group">
+                        <label for="editStudentName">Student Name</label>
+                        <input type="text" id="editStudentName" class="form-control" readonly>
+                    </div>
+                    <div class="form-group">
+                        <label for="editAttendanceDate">Date</label>
+                        <input type="text" id="editAttendanceDate" class="form-control" readonly>
+                    </div>
+                    <div class="form-group">
+                        <label for="editAttendanceTime">Time</label>
+                        <input type="text" id="editAttendanceTime" class="form-control" readonly>
+                    </div>
+                    <div class="form-group">
+                        <label for="editAttendanceStatus">Status</label>
+                        <select id="editAttendanceStatus" class="form-control" required>
+                            <option value="pending">Pending</option>
+                            <option value="approved">Approved</option>
+                            <option value="rejected">Rejected</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="editAttendanceNotes">Notes (Optional)</label>
+                        <textarea id="editAttendanceNotes" class="form-control" rows="3" placeholder="Add any notes about this status change..."></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn" onclick="closeModal('editAttendanceModal')">Cancel</button>
+                <button class="btn btn-primary" onclick="updateAttendanceStatus()">Update Status</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
