--- a/teacher.html
+++ b/teacher.html
@@ -184,10 +184,11 @@
                             <thead>
                                 <tr>
                                     <th>Student</th>
-                                    <th>Student ID</th>
+                                    <th>Email</th>
                                     <th>Date</th>
                                     <th>Time</th>
                                     <th>Status</th>
+                                    <th>Approved By</th>
                                     <th>Actions</th>
                                 </tr>
                             </thead>
@@ -200,50 +201,52 @@
             </div>
 
             <!-- Attendance History Section -->
-            <div id="historySection" class="section-content" style="display: none;">
-                <div class="card">
-                    <div class="card-header">
-                        <h2>Attendance History</h2>
-                        <span class="action" onclick="exportFullAttendance()">Export PDF</span>
-                    </div>
-                    <div class="card-body">
-                        <div class="filter-controls">
-                            <div class="filter-control">
-                                <label for="historyDateFilter">Date Range</label>
-                                <input type="date" id="historyDateFilter" class="form-control" onchange="filterAttendanceHistory()">
-                            </div>
-                            <div class="filter-control">
-                                <label for="historyStudentFilter">Student</label>
-                                <input type="text" id="historyStudentFilter" class="form-control" placeholder="Search student..." onkeyup="filterAttendanceHistory()">
-                            </div>
-                            <div class="filter-control">
-                                <label for="statusFilter">Status</label>
-                                <select id="statusFilter" class="form-control" onchange="filterAttendanceHistory()">
-                                    <option value="all">All Status</option>
-                                    <option value="approved">Approved</option>
-                                    <option value="pending">Pending</option>
-                                    <option value="rejected">Rejected</option>
-                                </select>
-                            </div>
-                        </div>
-                        <table class="data-table">
-                            <thead>
-                                <tr>
-                                    <th>Student</th>
-                                    <th>Student ID</th>
-                                    <th>Date</th>
-                                    <th>Time</th>
-                                    <th>Status</th>
-                                    <th>Approved By</th>
-                                </tr>
-                            </thead>
-                            <tbody id="historyTableBody">
-                                <!-- History data will be populated here -->
-                            </tbody>
-                        </table>
-                    </div>
+            <!-- Attendance History Section -->
+<div id="historySection" class="section-content" style="display: none;">
+    <div class="card">
+        <div class="card-header">
+            <h2>Attendance History</h2>
+            <span class="action" onclick="exportFullAttendance()">Export PDF</span>
+        </div>
+        <div class="card-body">
+            <div class="filter-controls">
+                <div class="filter-control">
+                    <label for="historyDateFilter">Date Range</label>
+                    <input type="date" id="historyDateFilter" class="form-control" onchange="filterAttendanceHistory()">
+                </div>
+                <div class="filter-control">
+                    <label for="historyStudentFilter">Student</label>
+                    <input type="text" id="historyStudentFilter" class="form-control" placeholder="Search student..." onkeyup="filterAttendanceHistory()">
+                </div>
+                <div class="filter-control">
+                    <label for="statusFilter">Status</label>
+                    <select id="statusFilter" class="form-control" onchange="filterAttendanceHistory()">
+                        <option value="all">All Status</option>
+                        <option value="approved">Approved</option>
+                        <option value="pending">Pending</option>
+                        <option value="rejected">Rejected</option>
+                    </select>
                 </div>
             </div>
+            <table class="data-table">
+                <thead>
+                    <tr>
+                        <th>Student</th>
+                        <th>Email</th>
+                        <th>Date</th>
+                        <th>Time</th>
+                        <th>Status</th>
+                        <th>Approved By</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="historyTableBody">
+                    <!-- History data will be populated here -->
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
             <!-- Reports Section -->
             <div id="reportsSection" class="section-content" style="display: none;">
