--- a/admin.html
+++ b/admin.html
@@ -285,7 +285,7 @@
                             <thead>
                                 <tr>
                                     <th>Student</th>
-                                    <th>Student ID</th>
+                                    <th>Email</th>
                                     <th>Date</th>
                                     <th>Time</th>
                                     <th>Status</th>
@@ -474,6 +474,10 @@
                     <div class="form-group">
                         <label for="editStudentName">Student Name</label>
                         <input type="text" id="editStudentName" class="form-control" readonly>
+                    </div>
+                    <div class="form-group">
+                        <label for="editStudentEmail">Email</label>
+                        <input type="text" id="editStudentEmail" class="form-control" readonly>
                     </div>
                     <div class="form-group">
                         <label for="editAttendanceDate">Date</label>
