--- a/admin.html
+++ b/admin.html
@@ -27,7 +27,7 @@
         <aside class="sidebar">
             <div class="logo-section">
                 <div class="logo">
-                    <i class="fas fa-graduation-cap"></i>
+                    <img src="transparentLogo.png" alt="STK College Logo">
                 </div>
                 <div class="logo-text">
                     <h2>STK College</h2>
