--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Setup Admin - EduTrack</title>
+    <title>Setup Admin - STKCollege</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
         <div class="login-card" style="max-width: 500px; margin: 0 auto;">
             <div class="logo-section">
                 <div class="logo">
-                    <i class="fas fa-user-shield"></i>
+                    <img src="transparentLogo.png" alt="STK College Logo">
                 </div>
                 <h1>Setup Admin Account</h1>
                 <p>Create your admin account to get started</p>
