--- a/login.html
+++ b/login.html
@@ -3,51 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>STK College - Login</title>
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <title>Login - STKCollege</title>
     <link rel="stylesheet" href="login.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Toast Container -->
+    <!-- Toast Container at top center -->
     <div class="toast-container" id="toastContainer"></div>
 
-    <div class="login-container">
-        <div class="login-card">
+    <div class="container">
+        <div class="login-card" style="max-width: 500px; margin: 0 auto;">
             <div class="logo-section">
                 <div class="logo">
-                    <i class="fas fa-graduation-cap"></i>
+                    <img src="transparentLogo.png" alt="STK College Logo">
                 </div>
-                <div class="logo-text">
-                    <h1>STK College</h1>
-                    <p>Attendance Management System</p>
-                </div>
+                <h1>STK College</h1>
+                <p>Attendance Management System</p>
             </div>
 
-            <form class="login-form" id="loginForm">
-                <div class="form-group">
-                    <label for="email">Email Address</label>
-                    <div class="input-group">
-                        <i class="fas fa-envelope"></i>
-                        <input type="email" id="email" class="form-control" placeholder="Enter your email" required>
-                    </div>
+            <form id="loginForm" class="login-form">
+                <div class="input-group">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" id="email" placeholder="Enter your email" required>
                 </div>
 
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <div class="input-group">
-                        <i class="fas fa-lock"></i>
-                        <input type="password" id="password" class="form-control" placeholder="Enter your password" required>
-                        <i class="fas fa-eye password-toggle" id="passwordToggle"></i>
-                    </div>
+                <div class="input-group">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" id="password" placeholder="Enter your password" required>
+                    <i class="fas fa-eye toggle-password" id="passwordToggle"></i>
                 </div>
 
-                <div class="form-group">
-                    <label>Login as</label>
+                <div>
+                    <label style="display: block; margin-bottom: 0.5rem; font-weight: 500; color: var(--gray-700);">Login as</label>
                     <div class="role-selection">
                         <div class="role-option">
                             <input type="radio" id="roleAdmin" name="role" value="admin">
@@ -81,11 +69,12 @@
                     <a href="#" class="forgot-password">Forgot Password?</a>
                 </div>
 
-                <button type="submit" class="btn btn-primary" id="loginButton">
+                <button type="submit" class="login-btn" id="loginButton">
                     <i class="fas fa-sign-in-alt"></i>
-                    Sign In
+                    <span class="btn-text">Sign In</span>
                 </button>
 
+                <!-- Hidden error message (replaced by toast) -->
                 <div class="error-message" id="errorMessage">
                     <i class="fas fa-exclamation-circle"></i>
                     <span id="errorText"></span>
@@ -97,7 +86,11 @@
             </div>
         </div>
     </div>
-     <script src="login.js"></script>
+
+    <!-- Firebase SDKs -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.23.0/firebase-app-compat.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.23.0/firebase-auth-compat.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.23.0/firebase-firestore-compat.min.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
-[file content end]
