--- a/student.html
+++ b/student.html
@@ -28,7 +28,7 @@
         <aside class="sidebar" id="sidebar">
             <div class="logo-section">
                 <div class="logo">
-                    <i class="fas fa-graduation-cap"></i>
+                    <img src="transparentLogo.png" alt="STK College Logo">
                 </div>
                 <div class="logo-text">
                     <h2>STK College</h2>
