reset password html, css and js

--- a/login.html
+++ b/login.html
@@ -66,7 +66,7 @@
                         <input type="checkbox" id="rememberMe">
                         <label for="rememberMe">Remember me</label>
                     </div>
-                    <a href="#" class="forgot-password">Forgot Password?</a>
+                    <a href="resetPassword.html" class="forgot-password">Forgot Password?</a>
                 </div>
 
                 <button type="submit" class="login-btn" id="loginButton">
