--- a/student.html
+++ b/student.html
@@ -210,7 +210,7 @@
                                     <th>Time</th>
                                     <th>Status</th>
                                     <th>Approved By</th>
-                                    <th>Remarks</th>
+                                    <th>Comment</th>
                                 </tr>
                             </thead>
                             <tbody id="attendanceTableBody">
