--- a/resetPassword.html
+++ b/resetPassword.html
@@ -7,7 +7,11 @@
     <title>Password Reset - STKCollege</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="resetPassword.js" defer></script>
+    
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth-compat.js"></script>
+    
     <link rel="stylesheet" href="resetPassword.css">    
 </head>
 <body>
@@ -117,5 +121,8 @@
             </div>
         </div>
     </div>
+
+    <!-- Load the updated JavaScript with Firebase integration -->
+    <script src="resetPassword.js"></script>
 </body>
 </html>
