--- a/resetPassword.html
+++ b/resetPassword.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="transparentLogo.png">
+    <link rel="icon" type="image/png" href="STKLogo.png">
     <title>Password Reset - STKCollege</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
         <div class="password-card">
             <div class="logo-section">
                 <div class="logo">
-                    <img src="transparentLogo.png" alt="STK College Logo">
+                    <img src="STKLogo.png" alt="STK College Logo">
                 </div>
                 <h1>Password Reset</h1>
                 <p>Follow the steps to reset your password</p>
