--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="transparentLogo.png">
+    <link rel="icon" type="image/png" href="STKLogo.png">
     <title>Setup Admin - STKCollege</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -14,7 +14,7 @@
         <div class="login-card" style="max-width: 500px; margin: 0 auto;">
             <div class="logo-section">
                 <div class="logo">
-                    <img src="transparentLogo.png" alt="STK College Logo">
+                    <img src="STKLogo.png" alt="STK College Logo">
                 </div>
                 <h1>Setup Admin Account</h1>
                 <p>Create your admin account to get started</p>
