--- a/student.html
+++ b/student.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="transparentLogo.png">
+    <link rel="icon" type="image/png" href="STKLogo.png">
     <title>STK College - Student Dashboard</title>
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
@@ -29,7 +29,7 @@
         <aside class="sidebar" id="sidebar">
             <div class="logo-section">
                 <div class="logo">
-                    <img src="transparentLogo.png" alt="STK College Logo">
+                    <img src="STKLogo.png" alt="STK College Logo">
                 </div>
                 <div class="logo-text">
                     <h2>STK College</h2>
