--- a/teacher.html
+++ b/teacher.html
@@ -18,6 +18,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Mobile Menu Toggle -->
+    <button class="menu-toggle mobile-only" onclick="toggleSidebar()">
+        <i class="fas fa-bars"></i>
+    </button>
     <!-- Toast Container -->
     <div class="toast-container" id="toastContainer"></div>
 
