--- a/SetupAdminAccount.html
+++ b/SetupAdminAccount.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="STKLogo.png">
     <title>Setup Admin - STKCollege</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="SetupAdminAccount.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
